--- a/index.html
+++ b/index.html
@@ -64,36 +64,30 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
-					<h2>Featured <strong>Portfolio</strong></h2>
+					<h2>My <strong>Projeck</strong></h2>
 				</div>
 			</div>
-			<div class="filters">
-				<ul>
-					<li class="active" data-filter="*">All</li>
-					<li data-filter=".packaging">Packaging</li>
-					<li data-filter=".mockup">Mockup</li>
-					<li data-filter=".typography">Typography</li>
-					<li data-filter=".photography">Photography</li>
-				</ul>
-			</div>
-
 			<div class="filters-content">
 				<div class="row grid">
 					<div class="single-portfolio col-sm-4 all mockup">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p1.jpg" alt="">
+								<img class="image img-fluid" src="images/Desktop - 1.jpg" alt="">
 							</div>
-							<a href="images/p1.jpg" class="img-pop-up">  
+							<a href="images/Desktop - 1.jpg" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<h4>Square Box Mockup</h4>
-							<div class="cat">Mockup</div>
+							<a target="_blank"
+							 href="https://public.tableau.com/app/profile/wahyu.w3208/viz/DashboardWarmindo_17027166874630/DashboardFinal">
+								<h4>Dashboard Warmindo</h4>
+								
+							</a>
+							<div class="cat">Click</div>
 						</div>                                         
 					</div>
 					<div class="single-portfolio col-sm-4 all mockup">
