Udate Terbaru Web Portfolio

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-resume">My Skil</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-resume">My Skills</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
 			</div>
@@ -41,22 +41,42 @@
 
 
 
-
-	<section class="site-hero" style="background-image: url(https://images.unsplash.com/photo-1701822770347-26898fe298e3?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);" id="section-home" data-stellar-background-ratio="0.5">
+	<section class="site-hero" style="background-image: url(https://media.istockphoto.com/id/1302189748/id/foto/dunia-maya-digital-dengan-partikel-dan-koneksi-jaringan-data-digital-koneksi-kecepatan-tinggi.jpg?s=612x612&w=0&k=20&c=Xok7N4E8bZPP-chkJddiOl6-6Buct6tl9T_lNaHB0Pc=);" id="section-home" data-stellar-background-ratio="0.5">
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Wahyu Wahid</strong></h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Profile</strong>
-
+					
 				</div>
 			</div>
 		</div>
 	</section> <!-- section -->
+	
+	
 
-
-
+	<section class="site-section" id="section-about">
+		<div class="container">
+			<div class="row mb-5 align-items-center">
+				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
+					<img src="images/image_1.jpg" alt="Image placeholder" class="img-fluid">
+				</div>
+				<div class="col-lg-5 pl-lg-5">
+					<div class="section-heading">
+						<h2>About <strong>Me</strong></h2>
+					</div>
+					<p class="lead"><b>Hello, I'm Wahyu Wahid!</b></p>
+					<p class="lead">Currently 19 years old, I am a student at UIN Medan majoring in Islamic Insurance. I am currently building my career in the field of data, particularly in data analysis and business. I believe that every number has an interesting story to tell.</p>
+					<p class="mb-5">Sports is one of my main hobbies, reflecting a healthy and active lifestyle. The combination of my career in data analysis and physical well-being can provide unique insights into a holistic approach to life.</p>
+					<p>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
@@ -103,7 +123,7 @@
 			<div class="row">
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
-						<h2>My <strong>Resume</strong></h2>
+						<h2>My <strong>Skills</strong></h2>
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -176,7 +196,7 @@
 		</div>
 	</section> <!-- .section -->
 
-	<section class="site-section" id="section-about">
+	<!-- <section class="site-section" id="section-about">
 		<div class="container">
 			<div class="row mb-5 align-items-center">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
@@ -198,7 +218,7 @@
 
 
 		</div>
-	</section>
+	</section> -->
 
 	
 
