--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading">
-						<h2>About <strong>Me</strong></h2>
+						<h2 class="text-dark border border-dark bg-warning pb-3 text-center"><strong>About Me</strong></h2>
 					</div>
-					<p class="lead"><b>Hello, I'm Wahyu Wahid!</b></p>
-					<p class="lead">Currently 19 years old, I am a student at UIN Medan majoring in Islamic Insurance. I am currently building my career in the field of data, particularly in data analysis and business. I believe that every number has an interesting story to tell.</p>
-					<p class="mb-5">Sports is one of my main hobbies, reflecting a healthy and active lifestyle. The combination of my career in data analysis and physical well-being can provide unique insights into a holistic approach to life.</p>
+					<p class="lead text-dark" style="text-align: justify;"><b>Hello, I'm Wahyu Wahid!</b></p>
+					<p class="lead text-dark" style="text-align: justify;">Currently 20 years old, I am a student at UIN Medan majoring in Islamic Insurance. I am currently building my career in the field of data, particularly in data analysis and business. I believe that every number has an interesting story to tell.</p>
+					<p class="mb-5 text-dark" style="text-align: justify;">Sports is one of my main hobbies, reflecting a healthy and active lifestyle. The combination of my career in data analysis and physical well-being can provide unique insights into a holistic approach to life.</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="https://drive.google.com/file/d/1I9V_5sO2LJYknh6VprGSH-lThhwmzQWf/view?usp=sharing" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
 					</p>
 				</div>
 			</div>
@@ -81,16 +81,42 @@
 	</section>
 
 
-
 	<section class="site-section" id="section-portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
-					<h2>My <strong>Project </strong></h2>
+					<h2 class="text-dark border border-dark bg-warning pb-3 text-center"><strong>My Project </strong></h2>
 				</div>
 			</div>
+			<div class="container">
+				<div class="row">
+				  <div class="col-12 text-dark">
+					<div class="card mb-3" >
+						<div class="row g-0">
+						  <div class="col-md-4">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="" alt="">
+							</div>
+							<!-- <img src="..." class="img-fluid rounded-start" alt="..."> -->
+						  </div>
+						  <div class="col-md-8">
+							<div class="card-body">
+							  <h3 class="text-dark" style="font-weight: bold;">Card title</h3>
+							  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+							</div>
+						  </div>
+						</div>
+					  </div>
+					</div>
+				</div>
+			  </div>
+
+<!---------------------------------------------------------------------------- -->
+
 			<div class="filters-content">
-				<div class="row grid">
+				<div class="grid">
 					<div class="single-portfolio col-sm-4 all mockup">
 						<div class="relative">
 							<div class="thumb">
@@ -107,7 +133,7 @@
 							<a target="_blank"
 							 href="https://public.tableau.com/app/profile/wahyu.w3208/viz/DashboardWarmindo_17027166874630/DashboardFinal">
 							 	<br></br>
-								<h4>Dashboard Warmindo</h4>
+								<h4 class="text-dark">Dashboard Warmindo</h4>
 							</a>
 						</div>                                         
 					</div>
@@ -127,7 +153,7 @@
 							<a target="_blank"
 							 href="https://public.tableau.com/app/profile/wahyu.w3208/viz/AnalisaKematianKonflikIsraelDanPalestina/Dashboard1#1">
 							 	<br></br>
-								<h4>Dashboard Analysis Conflict Palestine And Israel</h4>
+								<h4 class="text-dark">Dashboard Analysis Conflict Palestine And Israel</h4>
 							</a>
 						</div>                                         
 					</div>
