--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 						<div class="row g-0">
 						  <div class="col-md-4">
 							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="" alt="">
+								<div class="overlay overlay-bg"></div>                   
+								<img class="image img-fluid" src="images/gabar_superstore.jpg" alt="">
 							</div>
 							<!-- <img src="..." class="img-fluid rounded-start" alt="..."> -->
 						  </div>
