--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
 				aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
+				<span style="color: black;">
+					<i class="fa-solid fa-bars text-dark"></i>&emsp;&emsp;&emsp;<span style="font-size: small;">THANKS FOR RIVIEW MY PROFILE</span>
+				</span>
 			</button>
 
 
@@ -210,24 +212,24 @@
 			<!-- .section -->
 
 
-			<section class="site-section" id="section-portfolio">
+			<section class="site-section" id="section-portfolio">-
 				<div class="container">
-					<div class="row">
+					<div class="row g3">
 						<div class="section-heading text-center col-md-12">
 							<h2 class="text-dark border border-dark bg-warning pb-3 text-center"><strong>My Skills
 								</strong></h2>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded border">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+					<div class="row g-3">
+						<div class="col-md-6 col-lg-4 text-center ">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span><img src="images/gambar_python.png" alt="ini icon python" width="100%" height="150" style="object-fit: contain;"></span>
 								<br>
 								<div class="mb-4 text-dark h5 fw-bold mt-5"><b>PYTHON</b></div>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded border">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<div class="col-md-6 col-lg-4 text-center ">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span>
 									<img src="images/gambar_sql_3-removebg-preview.png" alt="ini icon python"
 										width="100%" height="150" style="object-fit: contain;">
@@ -236,8 +238,8 @@
 								</span>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded border">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<div class="col-md-6 col-lg-4 text-center ">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span>
 									<img src="images/Tableau-Logo-removebg-preview.png" alt="ini icon python"
 										width="100%" height="150" style="object-fit: contain;">
@@ -246,8 +248,8 @@
 								</span>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded border">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<div class="col-md-6 col-lg-4 text-center ">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span>
 									<img src="images/Looker-removebg-preview.png" alt="ini icon python" width="100%"
 										height="150" style="object-fit: contain;">
@@ -257,8 +259,8 @@
 								</span>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded border">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<div class="col-md-6 col-lg-4 text-center ">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span>
 									<img src="images/excel.png" alt="ini icon python" width="100%" height="150"
 										style="object-fit: contain;">
@@ -298,20 +300,20 @@
 			</div> -->
 
 					<div class="row">
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-								<span class="icon">
+						<div class="col-md-6 col-lg-4 text-center">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+								<span class="icon mb-5">
 									<i class="fab fa-google fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
 									<p><b><strong><a href="#" class="site-link text-dark" style="color: white;">
 													wahyuwahid146@gmail.com </a></b></strong></p>
 								</h3>
-							</div>
+			 				</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-								<span class="icon">
+						<div class="col-md-6 col-lg-4 text-center">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+								<span class="icon mb-5">
 									<i class="fab fa-whatsapp fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
@@ -320,9 +322,9 @@
 								</h3>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-								<span class="icon">
+						<div class="col-md-6 col-lg-4 text-center">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+								<span class="icon mb-5">
 									<i class="fa-solid fa-house fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
@@ -332,9 +334,9 @@
 								</h3>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-								<span class="icon">
+						<div class="col-md-6 col-lg-4 text-center">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+								<span class="icon mb-5">
 									<i class="fa-brands fa-instagram fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
@@ -343,9 +345,9 @@
 								</h3>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4 text-center mb-5 shadow p-3 mb-5 bg-body rounded">
-							<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-								<span class="icon">
+						<div class="col-md-6 col-lg-4 text-center">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+								<span class="icon mb-5">
 									<i class="fa-brands fa-linkedin fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
