--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-resume">My Skills</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-myskills">My Skills</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
 			</div>
@@ -88,7 +88,7 @@
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
 						<a href="https://drive.google.com/file/d/1I9V_5sO2LJYknh6VprGSH-lThhwmzQWf/view?usp=sharing"
-							class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+							class="btn btn-secondary px-4 py-2 btn-sm" target="_blank">Download CV</a>
 					</p>
 				</div>
 			</div>
@@ -212,7 +212,7 @@
 			<!-- .section -->
 
 
-			<section class="site-section" id="section-portfolio">-
+			<section class="site-section" id="section-myskills">-
 				<div class="container">
 					<div class="row g3">
 						<div class="section-heading text-center col-md-12">
@@ -262,11 +262,11 @@
 						<div class="col-md-6 col-lg-4 text-center ">
 							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
 								<span>
-									<img src="images/excel.png" alt="ini icon python" width="100%" height="150"
+									<img src="images/microsoft_office.png" alt="ini icon python" width="100%" height="150"
 										style="object-fit: contain;">
 									<br>
 									<p></p>
-									<div class="mb-4 text-dark h5 fw-bold mt-5"><b>EXCEL</b></div>
+									<div class="mb-4 text-dark h5 fw-bold mt-5"><b>WORD | EXCEL | PPT</b></div>
 								</span>
 							</div>
 						</div>
@@ -306,8 +306,8 @@
 									<i class="fab fa-google fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="#" class="site-link text-dark" style="color: white;">
-													wahyuwahid146@gmail.com </a></b></strong></p>
+									<p><b><strong><a href="mailto:recipient@wahyuwahid146.com" target="_blank" class="site-link text-dark" style="color: white;">
+													wahyuwahid146@gmail.com </a></strong></b></p>
 								</h3>
 			 				</div>
 						</div>
@@ -317,7 +317,7 @@
 									<i class="fab fa-whatsapp fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="#" class="site-link text-dark" style="color: white;">
+									<p><b><strong><a href="https://api.whatsapp.com/send/?phone=6285296998217&text&type=phone_number&app_absent=0" class="site-link text-dark" style="color: white;" target="_blank">
 													085296998217 </a></b></p></strong>
 								</h3>
 							</div>
@@ -340,7 +340,7 @@
 									<i class="fa-brands fa-instagram fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="#" class="site-link text-dark" style="color: white;">
+									<p><b><strong><a href="https://www.instagram.com/_wahyuwhd/" target="_blank" class="site-link text-dark" style="color: white;">
 													@_wahyuwhd </a></b></strong></p>
 								</h3>
 							</div>
@@ -351,7 +351,7 @@
 									<i class="fa-brands fa-linkedin fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="#" class="site-link text-dark" style="color: white;"> Wahyu
+									<p><b><strong><a href="https://www.linkedin.com/feed/" target="_blank" class="site-link text-dark" style="color: white;"> Wahyu
 													Wahid </a></b></strong></p>
 								</h3>
 							</div>
