update landing page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <body data-spy="scroll" dat a-target="#pb-navbar" data-offset="200">
 
 
-
 	<nav class="navbar navbar-expand-lg site-navbar navbar-l ight bg-light" id="pb-navbar">
 
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
 				aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
 				<span style="color: black;">
-					<i class="fa-solid fa-bars text-dark"></i>&emsp;&emsp;&emsp;<span style="font-size: small;">THANKS FOR RIVIEW MY PROFILE</span>
+					<i class="fa-solid fa-bars text-dark"></i>&emsp;&emsp;&emsp;<span style="font-size: small;">THANKS
+						FOR RIVIEW MY PROFILE</span>
 				</span>
 			</button>
 
@@ -48,9 +48,8 @@
 
 
 
-	<section class="site-hero"
-		style="background-image: url(images/BG.jpg);"
-		id="section-home" data-stellar-background-ratio="0.5">
+	<section class="site-hero" style="background-image: url(images/BG.jpg);" id="section-home"
+		data-stellar-background-ratio="0.5">
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
@@ -117,8 +116,12 @@
 								</div>
 								<div class="col-md-8">
 									<div class="card-body">
-										<h3 class="text-dark" style="font-weight: bold;">Anlaisis Superstore Sales</h3>
-										<p class="card-text">This is a wider card with supporting text below as a
+										<h3 class="text-dark" style="font-weight: bold;"><a href="blank_porto.html"
+												class="text-dark" style="font-weight: bold;">
+												Analisis Superstore Sales
+											</a></h3>
+										<p class="card-text">
+											This is a wider card with supporting text below as a
 											natural lead-in to additional content. This content is a little bit longer.
 										</p>
 										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
@@ -160,57 +163,6 @@
 				</div>
 			</div>
 
-			<!-- -------------------------------------------------------------------------- -->
-
-			<!-- <div class="filters-content">
-				<div class="grid">
-					<div class="single-portfolio col-sm-4 all mockup">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/image 1.jpg" alt="">
-							</div>
-							<a href="images/image 1.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
-						</div>
-						<div class="p-inner">
-							<a target="_blank"
-							 href="https://public.tableau.com/app/profile/wahyu.w3208/viz/DashboardWarmindo_17027166874630/DashboardFinal">
-							 	<br>
-								<h4 class="text-dark">Dashboard Warmindo</h4>
-							</a>
-						</div>                                         
-					</div>
-					<div class="single-portfolio col-sm-4 all mockup">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/Foto_Dashboard_Conflict_Palestine_Israel.png" alt="">
-							</div>
-							<a href="images/Foto_Dashboard_Conflict_Palestine_Israel.png" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
-						</div>
-						<div class="p-inner">
-							<a target="_blank"
-							 href="https://public.tableau.com/app/profile/wahyu.w3208/viz/AnalisaKematianKonflikIsraelDanPalestina/Dashboard1#1">
-							 	<br>
-								<h4 class="text-dark">Dashboard Analysis Conflict Palestine And Israel</h4>
-							</a>
-						</div>                                         
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section> -->
-			<!-- .section -->
-
 
 			<section class="site-section" id="section-myskills">-
 				<div class="container">
@@ -222,14 +174,17 @@
 					</div>
 					<div class="row g-3">
 						<div class="col-md-6 col-lg-4 text-center ">
-							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
-								<span><img src="images/gambar_python.png" alt="ini icon python" width="100%" height="150" style="object-fit: contain;"></span>
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border"
+								data-animate-effect="fadeIn">
+								<span><img src="images/gambar_python.png" alt="ini icon python" width="100%"
+										height="150" style="object-fit: contain;"></span>
 								<br>
 								<div class="mb-4 text-dark h5 fw-bold mt-5"><b>PYTHON</b></div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center ">
-							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border"
+								data-animate-effect="fadeIn">
 								<span>
 									<img src="images/gambar_sql_3-removebg-preview.png" alt="ini icon python"
 										width="100%" height="150" style="object-fit: contain;">
@@ -239,7 +194,8 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center ">
-							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border"
+								data-animate-effect="fadeIn">
 								<span>
 									<img src="images/Tableau-Logo-removebg-preview.png" alt="ini icon python"
 										width="100%" height="150" style="object-fit: contain;">
@@ -249,7 +205,8 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center ">
-							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border"
+								data-animate-effect="fadeIn">
 								<span>
 									<img src="images/Looker-removebg-preview.png" alt="ini icon python" width="100%"
 										height="150" style="object-fit: contain;">
@@ -260,10 +217,11 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center ">
-							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border" data-animate-effect="fadeIn">
+							<div class="site-service-item site-animate mb-5 shadow px- mb-5 bg-body rounded border"
+								data-animate-effect="fadeIn">
 								<span>
-									<img src="images/microsoft_office.png" alt="ini icon python" width="100%" height="150"
-										style="object-fit: contain;">
+									<img src="images/microsoft_office.png" alt="ini icon python" width="100%"
+										height="150" style="object-fit: contain;">
 									<br>
 									<p></p>
 									<div class="mb-4 text-dark h5 fw-bold mt-5"><b>WORD | EXCEL | PPT</b></div>
@@ -287,43 +245,38 @@
 							</div>
 						</div>
 					</div>
-					<!-- <div class="row mb-5">
-				<div class="col-md-12 text-center">
-					<p> -->
-					<!-- <a href="#" class="social-item"><span class="icon-facebook2" style="font-size: 100px; margin-right: 100px;"></span></a><p>gdf</p> -->
-					<!-- <a href="#" class="social-item" style="font-size: 100px; margin-right: 100px;"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item" style="font-size: 100px; margin-right: 100px;"><span class="icon-instagram2"></span></a>
-						<a target="_blank" href="https://www.linkedin.com/in/wahyu-wahid-766383268/" class="social-item" style="font-size: 100px; margin-right: 100px;"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item" style="font-size: 100px; margin-right: 100px;"><span class="icon-vimeo"></span></a> -->
-					<!-- </p>
-				</div>
-			</div> -->
+
 
 					<div class="row">
 						<div class="col-md-6 col-lg-4 text-center">
-							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded"
+								data-animate-effect="fadeIn" style="min-height: 280px;">
 								<span class="icon mb-5">
 									<i class="fab fa-google fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="mailto:recipient@wahyuwahid146.com" target="_blank" class="site-link text-dark" style="color: white;">
+									<p><b><strong><a href="mailto:recipient@wahyuwahid146.com" target="_blank"
+													class="site-link text-dark" style="color: white;">
 													wahyuwahid146@gmail.com </a></strong></b></p>
 								</h3>
-			 				</div>
+							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center">
-							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded"
+								data-animate-effect="fadeIn" style="min-height: 280px;">
 								<span class="icon mb-5">
 									<i class="fab fa-whatsapp fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="https://api.whatsapp.com/send/?phone=6285296998217&text&type=phone_number&app_absent=0" class="site-link text-dark" style="color: white;" target="_blank">
+									<p><b><strong><a href="https://api.whatsapp.com/send/?phone=6285296998217&text&type=phone_number&app_absent=0"
+													class="site-link text-dark" style="color: white;" target="_blank">
 													085296998217 </a></b></p></strong>
 								</h3>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center">
-							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded"
+								data-animate-effect="fadeIn" style="min-height: 280px;">
 								<span class="icon mb-5">
 									<i class="fa-solid fa-house fa-4x mt-3" style="color: black;"></i>
 								</span>
@@ -335,23 +288,27 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center">
-							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded"
+								data-animate-effect="fadeIn" style="min-height: 280px;">
 								<span class="icon mb-5">
 									<i class="fa-brands fa-instagram fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="https://www.instagram.com/_wahyuwhd/" target="_blank" class="site-link text-dark" style="color: white;">
+									<p><b><strong><a href="https://www.instagram.com/_wahyuwhd/" target="_blank"
+													class="site-link text-dark" style="color: white;">
 													@_wahyuwhd </a></b></strong></p>
 								</h3>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 text-center">
-							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded" data-animate-effect="fadeIn" style="min-height: 280px;">
+							<div class="site-service-item site-animate mb-5 shadow p-3 mb-5 bg-body rounded"
+								data-animate-effect="fadeIn" style="min-height: 280px;">
 								<span class="icon mb-5">
 									<i class="fa-brands fa-linkedin fa-4x mt-3" style="color: black;"></i>
 								</span>
 								<h3 class="mb-4">
-									<p><b><strong><a href="https://www.linkedin.com/feed/" target="_blank" class="site-link text-dark" style="color: white;"> Wahyu
+									<p><b><strong><a href="https://www.linkedin.com/feed/" target="_blank"
+													class="site-link text-dark" style="color: white;"> Wahyu
 													Wahid </a></b></strong></p>
 								</h3>
 							</div>
@@ -359,98 +316,6 @@
 					</div>
 				</div>
 			</section>
-
-
-
-
-			<!-- <section class="site-section" id="section-blog">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>Blog on <strong>Medium</strong></h2>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
-
-
-
-			<!-- <footer class="site-footer">
-		<div class="container">
-
-			<div class="row mb-5">
-				<p class="col-12 text-center">
-					Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-					Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true" ></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-					Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-				</p>
-			</div>
-			
-			<div class="row mb-5">
-				<div class="col-md-12 text-center">
-					<p>
-						<a href="#" class="social-item"><span class="icon-facebook2"></span></a>
-						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-instagram2"></span></a>
-						<a target="_blank" href="https://www.linkedin.com/in/wahyu-wahid-766383268/" class="social-item"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item"><span class="icon-vimeo"></span></a>
-					</p>
-				</div>
-			</div>
-			
-		</div>
-	</footer> -->
-
 
 
 
@@ -468,9 +333,6 @@
 			<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 			<script src="js/custom.js"></script>
 
-			<!-- Google Map -->
-			<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    	<script src="js/google-map.js"></script> -->
 
 </body>
 
