update desain landing page

--- a/blank_porto.html
+++ b/blank_porto.html
@@ -26,12 +26,17 @@
       margin-bottom: 5px;
     }
   </style>
+  <style>
+    .justify-text {
+      text-align: left;
+    }
+  </style>
 </head>
 
-<body>
+<body data-spy="scroll" dat a-target="#pb-navbar" data-offset="200" style="background-color: #f0f0f0;">
   <center>
-    <div class="bg-white" style="width: 500px">
-      <div class="container mt-5">
+    <div style="width: 700px" class="bg-light px-5 shadow">
+      <div class="container pt-2">
         <div class="row justify-content-center">
           <div class="col-md-12">
             <div class="profile-card d-flex" style="display: flex; align-items: center">
@@ -43,21 +48,32 @@
       </div>
       <p></p>
       <div class="row">
-				<div class="section-heading text-center col-md-12">
-					<h2 class="text-dark pb-2 text-centers"><strong>Analisis Superstore Sales </strong>
-					</h2>
-				</div>
-			</div>
+        <div class="section-heading text-center col-md-12">
+          <h2 class="text-dark pb-2 text-centers"><strong>Analisis Superstore Sales </strong>
+          </h2>
+        </div>
+        <div>
+          <p class="text-dark justify-text ">Konteks
+            Dengan meningkatnya permintaan dan persaingan yang ketat di pasar, Superstore Raksasa mencari pengetahuan
+            Anda untuk memahami apa yang terbaik bagi mereka. Mereka ingin memahami produk, wilayah, kategori, dan
+            segmen pelanggan mana yang harus mereka targetkan atau hindari.
+
+            Anda bahkan dapat mengambil langkah lebih jauh dan mencoba membangun model Regresi untuk memprediksi
+            Penjualan atau Laba.
+
+            Jadilah gila dengan kumpulan data, tetapi pastikan juga untuk memberikan beberapa wawasan bisnis untuk
+            ditingkatkan. </p>
+
+            <img class="mt-5 mb-5" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5" src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5" src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5" src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5" src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil" width="100%" />
+        </div>
+      </div>
       <p></p>
-      <img src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil" width="350" height="250" />
+      <div class="row"></div>
       <p></p>
-      <img src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil" width="350" height="250" />
-      <p></p>
-      <img src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil" width="350" height="250" />
-      <p></p>
-      <img src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil" width="350" height="250" />
-      <p></p>
-      <img src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil" width="350" height="250" />
       <!-- 
         <h2 class="text-dark">Sub Judul</h2>
         <p class="text-dark">This is a paragraph.</p> -->
