--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
 												Analisis Superstore Sales
 											</a></h3>
 										<p class="card-text">
-											This is a wider card with supporting text below as a
-											natural lead-in to additional content. This content is a little bit longer.
+											Data ini adalah kumpulan data retail superstore selama 4 tahun
 										</p>
-										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+										<p class="card-text"><small class="text-muted">Tanggal Publikasi : 09 Desember 2024</small>
 										</p>
 									</div>
 								</div>
